Fixed brand img link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
 
       <a href="" class="brand">
-        <img src="/assets/images/flag.svg" alt="">
+        <img src="assets/images/flag.svg" alt="">
       </a>
 
       <div class="nav-collapse">
