--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <img src="assets/images/flag.svg" alt="">
     </a>
 
-    <div class="nav-collapse">
-      <ul>
+   
+      <ul class="nav-collapse">
         <li class="nav-item"><a href="#">
           Home
         </a></li>
@@ -56,7 +56,7 @@
           Links
         </a></li>
       </ul>
-    </div>
+    
 
     <a href="#" class="toggle"><i class="fas fa-bars"></i></a>
 
