--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
           About Us
         </a></li>
         <li class="nav-item"><a href="#">
+          Resources
+        </a></li>
+
+        <!-- <li class="nav-item"><a href="#">
           Visa and Consular Section
         </a></li>
         <li class="nav-item"><a href="#">
@@ -51,7 +55,7 @@
         </a></li>
         <li class="nav-item"><a href="#">
           Foreign Policy
-        </a></li>
+        </a></li> -->
         <li class="nav-item"><a href="#">
           Links
         </a></li>
